[package]
name = "bevy-todomvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.1", features = ["dynamic_linking"] }
bevy_cosmic_edit = { git = "https://github.com/StaffEngineer/bevy_cosmic_edit", version = "0.13.0" }
[features]
debug = []
